- Change: Updated OpenEXR from "1.4.0" to "1.6.1"
- Bugfix: The PLImageLoaderEXR plugin was broken, loading exr (high dynamic range image file format) images is working again
- Bugfix: "PLGraphics::IEConvert" e.g. RGB to RGBA is now working for floating point image formats
- Bugfix: "PLGraphics::IEScale" was not always working correctly


Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
- Feature: Linux 64 bit support for a minimal build added (64 bit support for optional projects not yet added)
- Feature: Added basic PLDemoRendererTexturing demo
- Feature: Added "PLEngine::SceneRendererTool" helper class for simplified scene renderer access
- Feature: Autodesk 3ds Max 2011 scene exporter added
- Feature: Performance improvements within the string implementation
- Feature: Added a static adapter class within PLGeneral for mapping Qt strings to PixelLight strings and vice versa
- Change: Integrated "PLCompositing::SRPPostProcessing" into the compositing system, now it's possible to use post processing within the deferred scene renderer
- Change: Moved nearly all compositing relevant classes from PLScene to PLCompositing
- Change: Scene graph update refactoring for less CPU usage
- Change: All file loader implementations now also have versions of the filename extensions written in capital letters (e.g. beside "tga" also "TGA")
- Change: Updated libpng from "1.2.44" to "1.4.5"


Changes in PixelLight 0.9.3-R1 (released on October 23, 2010)
- Feature: Added support for "LATC1" and "LATC2" (formally "3DC"/"ATI1N"/"ATI2N" on ATI GPU's only) texture compression
- Feature: Cg shader language support is now optional (PLRendererOpenGLCg plugin) instead of directly build in within PLRendererOpenGL
- Feature: Deferred scene renderer and HDR compositing steps are now supporting GLSL as well instead of just Cg
- Feature: Added MinGW support to the header file "PLGeneralWindows.h" from "PLGeneral"